[package]
name = "nu-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nu-cmd-extra = { version = "0.101", default-features = false }
nu-cmd-lang = { version = "0.101", default-features = false }
nu-command = { version = "0.101", default-features = false }
nu-engine = { version = "0.101", default-features = false }
nu-parser = { version = "0.101", default-features = false }
nu-protocol = { version = "0.101", default-features = false }
nuon = { version = "0.101", default-features = false }
wasm-bindgen = "0.2"

[patch.crates-io]
nu-cmd-extra = { git = "https://github.com/nushell/nushell.git" }
nu-cmd-lang = { git = "https://github.com/nushell/nushell.git" }
nu-command = { git = "https://github.com/nushell/nushell.git" }
nu-engine = { git = "https://github.com/nushell/nushell.git" }
nu-parser = { git = "https://github.com/nushell/nushell.git" }
nu-protocol = { git = "https://github.com/nushell/nushell.git" }
nuon = { git = "https://github.com/nushell/nushell.git" }

